--- a/codebase/frontend/src/CSS/Home.css
+++ b/codebase/frontend/src/CSS/Home.css
@@ -5,7 +5,19 @@
 .searchFilter{
     float: right;
     margin: 20px;
+    display: flex;
+    justify-content: space-between;
 }
+
+.searchFilter *{
+    margin-inline: 10px;
+}
+
+ .addressSearch *{
+    height: 50px;
+    padding: 5px;
+ }
+
 .searchFilter label{
     margin-right: 10px;
     font-weight: 700;
@@ -14,6 +26,8 @@
     height: 50px;
     width: 250px;
 }
+
+
 
 .intro{
     font-weight: 500;
@@ -39,9 +53,45 @@
 @media only screen and (max-width: 767px) {
     .searchFilter{
         float: left;
+        flex-direction: column;
     }
+
+    .addressSearch *{
+    height: 50px;
+    width: 100%;
+    padding: 5px;
+    }
+
+    .searchFilter *{
+    margin-block: 5px;
+    }
+
     .accountsDiv{
         clear: left;
         width: 80%;
     }
+}
+
+@media only screen and (min-width: 768px){
+    .addressSearch *{
+    height: 50px;
+    width: 400px !important;
+    padding: 5px;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 930px) {
+  .addressSearch * {
+    height: 50px;
+    width: 400px !important;
+    padding: 5px;
+  }
+}
+
+@media (min-width: 931px) {
+  .addressSearch * {
+    height: 50px;
+    width: 500px !important;
+    padding: 5px;
+  }
 }
